--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -33,4 +33,4 @@ jobs:
 
       - name: Terraform Plan (simulation, no backend)
         run: terraform plan -lock=false -input=false -no-color
-
+        continue-on-error: true
